Refactor : Deprecated methods removed.